# MinerU-Webkit

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: release.yml
tests/webpage_converter/core/assets/cccode/: android-googlesource.html  cprograming.c  cprograming.html  geeksforgeeks-0.java  geeksforgeeks-1.java  geeksforgeeks-2.java  geeksforgeeks-3.java  geeksforgeeks-4.java  geeksforgeeks.html  go-googlesource-0.go  go-googlesource.html  homemade-0.py  homemade-1.py  homemade-2.py  homemade.html  mathorg-0.py  mathorg.html  mathworks.html  mathworks.md  mathworks.txt  prismjs-0.html  prismjs-1.html  prismjs-2.html  prismjs-3.html  prismjs-4.html  prismjs-5.html  prismjs-6.sh  prismjs-7.ts  prismjs-8.js  prismjs-9.js  react-0.html  react-1.js  react-2.js  react-3.js  react-4.js  react-5.js  react-6.js  react-7.js  react.html  stackoverflow-0.java  (+17 more)
tests/webpage_converter/core/assets/ccimage/: figure_airtical.html  figure_iframe.html  inline_image.html  no_parent_img.html  object_pdf.html  picture_img.html  svg_base64.html  svg_e.html  svg_ee.html  svg_img.html  table_img.html  unescape_img.html
tests/webpage_converter/core/assets/ccmath/: asciimath.html  geoenergymath_img.html  geoenergymath_img_1.html  img_codecogs_com_inline_1.html  img_mimetex_cgi.html  img_mimetex_cgi_1.html  img_mimetex_cgi_inline_1.html  katex_mathjax.html  katex_mathjax_1.html  katex_mathjax_inline_1.html  libretexts_1_p_latex_mathjax.html  libretexts_1_p_latex_mathjax_1.html  libretexts_1_p_latex_mathjax_inline_1.html  math_class_math.html  math_class_math_inline_1.html  math_katex_latex_2.html  math_percentage.html  math_percentage_1.html  math_percentage_inline_1.html  math_physicsforums.html  math_physicsforums_1.html  math_physicsforums_2.html  math_physicsforums_2_1.html  math_physicsforums_2_inline_1.html  mathjax-mml-chtml.html  mathjax-mml-chtml_1.html  mathjax-mml-chtml_inline_1.html  mathjax-mml-chtml_prefix.html  mathjax-mml-chtml_prefix_1.html  mathjax_tex_chtml.html  mathjax_tex_chtml_1.html  mathjax_tex_chtml_inline_1.html  mathtex_script_type.html  stackexchange_1_span-math-container_latex_mathjax.html  stackexchange_1_span-math-container_latex_mathjax_1.html  stackexchange_1_span-math-container_latex_mathjax_inline_1.html  wikipedia_1_math_annotation.html  wikipedia_1_math_annotation_1.html  wikipedia_1_math_annotation_inline_1.html
tests/webpage_converter/core/assets/html/: Lack_content1.html  Lack_content1_main.html  br.html  clean_invisible_elements.html  delete_interactive_element1.html  delete_interactive_element1_main.html  para_br.html  para_br_main.html  para_has_none.html  simple_para.html  test_text_line_exception.html  text.html  text10.html  text11.html  text12.html  text2.html  text3.html  text4.html  text5.html  text6.html  text7.html  text8.html  text9.html  text_normalize_space1.html  text_normalize_space1_main.html  text_normalize_space2.html  text_normalize_space2_main.html  text_normalize_space3.html  text_normalize_space3_main.html  text_normalize_space4.html  text_normalize_space4_main.html  zh.html
tests/webpage_converter/core/assets/list/: complex_list.html  list_br_and_cctags.html  list_sub_sup.html  list_with_sub_no_prefix.html  list_with_sub_sup_tail.html  list_with_ul_text.html  simple_list.html  test-list-item.html
tests/webpage_converter/core/assets/recognizer/: cccode.html  image.html  iscctag.html  raw_html_attr.html  with_parent_nodes.html
tests/webpage_converter/core/assets/table/: nested_table1.html  nested_table2.html  nested_table3.html  nested_table4.html  only_table.html  table.html  table_exclude.html  table_has_formula.html  table_include_after_code.html  table_include_code_expect.json  table_include_image.html  table_include_image_expcet.json  table_include_rowspan_colspan.html  table_involve_code.html  table_involve_complex_code.html  table_involve_equation.html  table_simple_cc.html  table_simple_compex.html  table_to_content_list_complex.html  table_to_content_list_complex_res.json  table_to_content_list_simple.html  table_to_content_list_simple_res.json
tests/webpage_converter/core/recognizer/: test_code.py  test_image.py  test_list.py  test_math.py  test_math_render.py  test_para.py  test_recognizer.py  test_table.py  test_text.py  test_title.py
tests/webpage_extractor/core/: test_layout_parser.py  test_tag_mapping.py
(+29 files in other folders)
