[project]
name = "mineru-webkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "webpage_converter",
]

[tool.uv.workspace]
members = [
    "packages/webpage_converter",
    "packages/mcp_server",
]

[tool.uv.sources]
webpage_converter = { workspace = true }

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.ruff]
# 最大行长度
line-length = 320

[tool.ruff.lint]
# 选择要启用的规则集
select = [
    "E", # pycodestyle 错误
    "W", # pycodestyle 警告
    "F", # Pyflakes
    "I", # isort (导入排序)
#    "UP", # pyupgrade (保持代码现代化)
#     "PL", # Pylint 规则（按需开启）
]

# 忽略的规则，继承原 flake8 配置的部分忽略项
ignore = [
    "E701", # 同一行多个语句（E702 也包含在内）
    "E402", # 模块级导入不在文件顶部（通常需要在特定文件忽略）
    "F841",
    "F821",
    "E501",
    "W293"
]

[tool.ruff.format]
# 格式化相关的配置，Ruff 的格式化器兼容 Black 的风格
quote-style = "double"
indent-style = "space"
